调整 tuple 变更领域服务与读侧视图